--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
 
   <body>
-
+    <div class="header">
+      <div class="header-logo">Header Logo</div>
+      <ul>
+        <li>About Us</li>
+        <li>Shop</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
   </body>
 </html>
