Add style to header

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Landing Page</title>
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
     <div class="header">
-      <div class="header-logo">Header Logo</div>
-      <ul>
-        <li>About Us</li>
-        <li>Shop</li>
-        <li>Contact Us</li>
+      <div class="header-logo">For Pug's Sake</div>
+      <ul class="header-links">
+          <li>About Us</li>
+          <li>Shop</li>
+          <li>Contact Us</li>
       </ul>
     </div>
   </body>
