Add hero to index.html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Odin Landing Page</title>
-    <link href="style.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <div class="header">
-      <div class="header-logo">For Pug's Sake</div>
-      <ul class="header-links">
-          <li>About Us</li>
-          <li>Shop</li>
-          <li>Contact Us</li>
-      </ul>
+<head>
+  <meta charset="utf-8">
+  <title>Odin Landing Page</title>
+  <link href="style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+</head>
+
+<body>
+  <div class="header">
+    <div class="header-logo">For Pug's Sake</div>
+    <ul class="header-links">
+      <li>About Us</li>
+      <li>Shop</li>
+      <li>Contact Us</li>
+    </ul>
+  </div>
+
+  <div class="hero">
+    <div class="hero-content">
+      <p class="hero-main">Pugs are awesome</p>
+      <p class="hero-secondary">Look at their little scrunched noses and corkscrew tails. Aren't they the most adorable?
+      </p>
+      <button>Adopt me!</button>
     </div>
-  </body>
+    <div class="hero-image">
+      <img src="./images/pugs.jpg" alt="a brown and a black pug on a bed of autumn leaves">
+    </div>
+  </div>
+</body>
+
 </html>
