Add content section to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Landing Page</title>
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -14,7 +15,7 @@
     <div class="header-logo">For Pug's Sake</div>
     <ul class="header-links">
       <li>About Us</li>
-      <li>Shop</li>
+      <li>Adopt</li>
       <li>Contact Us</li>
     </ul>
   </div>
@@ -28,6 +29,28 @@
     </div>
     <div class="hero-image">
       <img src="./images/pugs.jpg" alt="a brown and a black pug on a bed of autumn leaves">
+    </div>
+  </div>
+
+  <div class="content">
+    <div class="content-title">Our pug models</div>
+    <div class="content-images-container">
+      <div class="content-image">
+        <img src="./images/pug-1.jpg" alt="a black pug wearing an orange scarf">
+        <p class="image-title">Harry</p>
+      </div>
+      <div class="content-image">
+        <img src="./images/pug-2.jpg" alt="a brown pug wearing a reindeer hat">
+        <p class="image-title">Hermione</p>
+      </div>
+      <div class="content-image">
+        <img src="./images/pug-3.jpg" alt="a black pug wearing a cute red bowtie">
+        <p class="image-title">Ron</p>
+      </div>
+      <div class="content-image">
+        <img src="./images/pug-4.jpg" alt="a brown pug wearing a halloween costume">
+        <p class="image-title">Neville</p>
+      </div>
     </div>
   </div>
 </body>
