Edit layout of hero and content sections

--- a/index.html
+++ b/index.html
@@ -5,30 +5,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odin Landing Page</title>
+  <title>For Pug's Sake</title>
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
-  <div class="header">
-    <div class="header-logo">For Pug's Sake</div>
-    <ul class="header-links">
-      <li>About Us</li>
-      <li>Adopt</li>
-      <li>Contact Us</li>
-    </ul>
-  </div>
-
-  <div class="hero">
-    <div class="hero-content">
-      <p class="hero-main">Pugs are awesome</p>
-      <p class="hero-secondary">Look at their little scrunched noses and corkscrew tails. Aren't they the most adorable?
-      </p>
-      <button>Adopt me!</button>
+  <div class="hero-container">
+    <div class="header">
+      <div class="header-logo">For Pug's Sake</div>
+      <ul class="header-links">
+        <li>About Us</li>
+        <li>Adopt</li>
+        <li>Contact Us</li>
+      </ul>
     </div>
-    <div class="hero-image">
-      <img src="./images/pugs.jpg" alt="a brown and a black pug on a bed of autumn leaves">
+
+    <div class="hero">
+      <div class="hero-content">
+        <p class="hero-main">Pugs are awesome</p>
+        <p class="hero-secondary">Look at their little scrunched noses and corkscrew tails. Aren't they the most adorable?
+        </p>
+        <button>Adopt me!</button>
+      </div>
+      <div class="hero-image">
+        <img src="./images/pugs.jpg" alt="a brown and a black pug on a bed of autumn leaves">
+      </div>
     </div>
   </div>
 
