Add quote section with style

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
       </div>
     </div>
   </div>
+
+  <div class="quote-section">
+    <div class="quote-container">
+      <p class="quote">"The pug is living proof that God has a sense of humour."</p>
+      <p class="quote-author">- Margo Kaufman</p>
+    </div>
+  </div>
 </body>
 
 </html>
