Add call-to-action button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="hero-main">Pugs are awesome</p>
         <p class="hero-secondary">Look at their little scrunched noses and corkscrew tails. Aren't they the most adorable?
         </p>
-        <button>Adopt me!</button>
+        <button class="adopt">Adopt me!</button>
       </div>
       <div class="hero-image">
         <img src="./images/pugs.jpg" alt="a brown and a black pug on a bed of autumn leaves">
@@ -60,6 +60,16 @@
     <div class="quote-container">
       <p class="quote">"The pug is living proof that God has a sense of humour."</p>
       <p class="quote-author">- Margo Kaufman</p>
+    </div>
+  </div>
+
+  <div class="cta-section">
+    <div class="cta-container">
+      <div class="cta-text">
+        <p class="cta-main">Looking to adopt one of us?</p>
+        <p class="cta-secondary">Email us to find out more. You'll even get to see more cute photos of us!</p>
+      </div>
+      <button class="email">Email us</button>
     </div>
   </div>
 </body>
