--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       <button class="email">Email us</button>
     </div>
   </div>
+
+  <div class="footer">
+    <p class="footer-text">zachloh for The Odin Project 2021</p>
+  </div>
 </body>
 
 </html>
